# vue-mcp

./: .dockerignore  .env.example  .env.production.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: build-and-push.yml  ci.yml  deploy-docs.yml  deploy.yml  restore.yml
data/: entity_dictionary.json  synonym_table.json
data/bm25_model/: vocab.json
data/bm25_model/bm25s_model/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/.vitepress/theme/: ApexChart.vue  custom.css  index.ts
docs/clients/: chatgpt.md  claude-code.md  claude-desktop.md  cursor.md  gemini-cli.md  index.md  jetbrains.md  opencode.md  vscode.md  windsurf.md  zed.md
docs/frameworks/: index.md  nuxt.md  pinia.md  vite.md  vitest.md  vue-devtools.md  vue-router.md  vue.md  vueuse.md
docs/guide/: getting-started.md  self-hosting.md  what-is-vue-mcp.md
docs/public/: CNAME
docs/reference/: benchmarks.md  frameworks.md  how-it-works.md  prompts.md  resources.md  tools.md
eval/: generate_questions.py  pyproject.toml  questions.json  questions_extreme.json  questions_hard.json  questions_raw.json  run_eval.py
eval/questions/: nuxt.json  pinia.json  vite.json  vitest.json  vue-devtools.json  vue-router.json  vue.json  vueuse.json
eval/src/vue_docs_eval/: __init__.py  __main__.py  cli.py  cost.py  judge.py  metrics.py  models.py  questions.py  reports.py  runner.py  tokens.py
eval/src/vue_docs_eval/providers/: __init__.py  base.py  context7.py  ours.py
scripts/: backup.sh  bootstrap.sh  deploy.sh  init-db.sql  inspect_chunks.py  restore.sh
tests/: test_clients.py  test_day3.py  test_day4.py  test_enrichment.py  test_expansion.py  test_incremental.py  test_ingestion.py  test_integration.py  test_markdown_parser.py  test_models.py  test_nuxt.py  test_parsing.py  test_parsing_coverage.py  test_pinia.py  test_postgres.py  test_reranking.py  test_server.py  test_vite.py  test_vitest.py  test_vue_devtools.py
