[project]
name = "vue-docs-mcp"
version = "0.1.0"
description = "MCP server for Vue.js documentation retrieval"
requires-python = ">=3.13"
dependencies = [
    "vue-docs-core",
    "vue-docs-ingestion",
    "vue-docs-server",
]

[tool.uv.sources]
vue-docs-core = { workspace = true }
vue-docs-ingestion = { workspace = true }
vue-docs-server = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as live integration tests requiring real API keys (deselect with '-m not integration')",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["packages/*/src", "tests", "eval"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line too long — handled by formatter
    "SIM108",  # ternary operator — sometimes less readable
    "UP007",   # X | Y union syntax — already using it where appropriate
    "UP042",   # replace-str-enum — ChunkType(str, Enum) is intentional for Qdrant payload compat
    "RUF012",  # mutable-class-default — Pydantic models handle this correctly
    "RUF059",  # unused-unpacked-variable — common in unpacking patterns
]

[tool.ruff.lint.isort]
known-first-party = ["vue_docs_core", "vue_docs_ingestion", "vue_docs_server"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
