[project]
name = "vue-docs-eval"
version = "0.1.0"
description = "Evaluation suite for Vue ecosystem docs MCP"
requires-python = ">=3.13"
dependencies = [
    "vue-docs-core",
    "vue-docs-server",
    "tiktoken>=0.9",
    "typer>=0.24",
    "rich>=14.3",
]

[tool.uv.sources]
vue-docs-core = { workspace = true }
vue-docs-server = { workspace = true }

[project.scripts]
vue-docs-eval = "vue_docs_eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vue_docs_eval"]
